--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -15,7 +15,7 @@ jobs:
           python-version: 3.11
       - uses: actions/checkout@v3
 
-      - name: install dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install upgrade-pip
           pip install flake8
@@ -25,3 +25,4 @@ jobs:
           flake8 .
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
+      
