--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,27 +1,38 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: GitHub CI Actions
+
 on: [pull_request]
+
 jobs:
   lint:
     name: flake8 lintintg
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        python: ["3.9", "3.10", "3.11"]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
       
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: ${{ matrix.python }}
+          cache: 'pip'
       - uses: actions/checkout@v3
 
       - name: install dependencies
         run: |
-          python -m pip install upgrade-pip
+          python -m pip install --upgrade pip setuptools wheel
           pip install flake8
       
       - name: Run flake8
         run: |
           flake8 .
+      
+      - name: Run Tests
+        run: |
+          python manage.py test
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
