--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -22,7 +22,7 @@ jobs:
           cache: 'pip'
       - uses: actions/checkout@v3
 
-      - name: install dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install flake8
@@ -30,9 +30,28 @@ jobs:
       - name: Run flake8
         run: |
           flake8 .
+
+      - run: echo "🍏 This job's status is ${{ job.status }}."
+
+  test:
+    name: test
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        python: ["3.11"]
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python }}
+          cache: 'pip'
+      - uses: actions/checkout@v3
       
       - name: Run Tests
         run: |
           python manage.py test
-
-      - run: echo "🍏 This job's status is ${{ job.status }}."
