--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        python: ["3.11"]
+        python: [3.11]
 
     steps:
       - name: Checkout code
@@ -25,7 +25,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8
+          pip install -r requirements.txt
       
       - name: Run flake8
         run: |
@@ -39,7 +39,7 @@ jobs:
 
     strategy:
       matrix:
-        python: ["3.11"]
+        python: [3.11]
 
     steps:
       - name: Check out code
@@ -51,7 +51,7 @@ jobs:
           python-version: ${{ matrix.python }}
           cache: 'pip'
       - uses: actions/checkout@v3
-      
+
       - name: Run Tests
         run: |
           python manage.py test
