feat: add CI workflow

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -2,6 +2,10 @@ name: GitHub CI Actions
 
 on: [pull_request]
 
+concurrency:
+  group: '${{ github.workflow }}-${{ github.head_ref || github.ref }}'
+  cancel-in-progress: true
+
 jobs:
   lint:
     name: flake8 lintintg
