--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -29,11 +29,11 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       
       - name: Run flake8
         run: |
-          flake8 .
+          python3 -m flake8 --append-config=setup.cfg
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
