add auto_review ci

--- a/.github/workflows/auto_review.yml
+++ b/.github/workflows/auto_review.yml
@@ -13,6 +13,6 @@ jobs:
         uses: necojackarc/auto-request-review@v0.10.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          reviewers: ${{ github.event.pull_request.user.login }}
+          reviewers: "sang-kipkoech"
           
           
