--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -67,4 +67,4 @@ jobs:
         uses: delivery-much/actions-assigner@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          reviewers: "sang-kipkoech"
+          users: "sang-kipkoech"
