--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -58,3 +58,12 @@ jobs:
       - name: Run Tests
         run: |
           python -m unittest test
+  
+  assign:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ./
+      with:
+        config: '.github/auto-assigner.yml'
+        token: ${{ secrets.GITHUB_TOKEN }}
