--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -63,7 +63,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: ./
+    - uses: ./.github/actions/auto-assigner
       with:
         config: '.github/auto-assigner.yml'
         token: ${{ secrets.GITHUB_TOKEN }}
