--- a/.github/auto-assigner.yml
+++ b/.github/auto-assigner.yml
@@ -1,11 +1,18 @@
----
-sang:
-  - sang-kipkoech
-sang2:
-  - shufo
-# you can use regexp
-sang.*:
-  - dorothy
-# fallback
-.*:
-  - brian
+# Set to true to add reviewers to pull requests
+addReviewers: true
+
+# Set to true to add assignees to pull requests
+addAssignees: author
+
+# # A list of assignees, overrides reviewers if set
+# assignees:
+#   - sang-kipkoech
+
+# A number of assignees to add to the pull request
+# Set to 0 to add all of the assignees.
+# Uses numberOfReviewers if unset.
+numberOfAssignees: 1
+
+# A list of keywords to be skipped the process that add reviewers if pull requests include it
+skipKeywords:
+  - wip, draft
