add auto_review ci

--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -15,4 +15,4 @@ numberOfAssignees: 1
 
 # A list of keywords to be skipped the process that add reviewers if pull requests include it
 skipKeywords:
-  - wip, draft
+  - wip
