--- a/.github/workflows/auto_reviewer.yml
+++ b/.github/workflows/auto_reviewer.yml
@@ -1,5 +1,9 @@
 name: 'Auto Assign'
-on: pull_request
+on: 
+  pull_request:
+    types: [opened, reopened, synchronize]
+    branches:
+      - main
 
 jobs:
   add-reviewers:
@@ -8,4 +12,11 @@ jobs:
       - uses: kentaro-m/auto-assign-action@v1.2.5
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+          add-reviewers: true
+          add-assignees: true
+          number-of-reviewers: 1
+          number-of-assignees: 1
+          skip-keywords: 'wip, draft' # comma-separated list of keywords
+          debug: true
+          include-reviewers: 'sang-kipkoech' # comma-separated list of usernames
           ignore-draft: true
