--- a/.github/workflows/auto_reviewer.yml
+++ b/.github/workflows/auto_reviewer.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           add-reviewers: true
-          add-assignees: ${{author_association == 'OWNER' || author_association == 'MEMBER'}}}
+          add-assignees: true
           number-of-reviewers: 1
           number-of-assignees: 1
           skip-keywords: 'wip, draft' # comma-separated list of keywords
