--- a/.github/workflows/auto_reviewer.yml
+++ b/.github/workflows/auto_reviewer.yml
@@ -12,11 +12,4 @@ jobs:
       - uses: delivery-much/actions-assigner@v1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          add-reviewers: true
-          add-assignees: true
-          number-of-reviewers: 1
-          number-of-assignees: 1
-          skip-keywords: 'wip, draft' # comma-separated list of keywords
-          debug: true
-          include-reviewers: 'sang-kipkoech' # comma-separated list of usernames
-          ignore-draft: true
+          reviewers: 'sang-kipkoech' # comma-separated list of usernames
