--- a/.github/workflows/auto_reviewer.yml
+++ b/.github/workflows/auto_reviewer.yml
@@ -11,5 +11,5 @@ jobs:
     steps:
       - uses: delivery-much/actions-assigner@v1
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           reviewers: 'sang-kipkoech' # comma-separated list of usernames
