--- a/.github/workflows/auto_reviewer.yml
+++ b/.github/workflows/auto_reviewer.yml
@@ -1,9 +1,5 @@
 name: 'Auto Assign'
-on: 
-  pull_request:
-    types: [opened, reopened, synchronize]
-    branches:
-      - main
+on: pull_request
 
 jobs:
   add-reviewers:
