--- a/.github/workflows/auto_reviewer.yml
+++ b/.github/workflows/auto_reviewer.yml
@@ -1,11 +1,15 @@
-name: 'Auto Assign'
-on: pull_request
+name: Auto Assign Reviewers
+
+on:
+  pull_request:
+    types: [opened, reopened]
+    branches:
+      - main
 
 jobs:
-  add-reviewers:
+  auto_assign_reviewers:
     runs-on: ubuntu-latest
     steps:
       - uses: delivery-much/actions-assigner@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          reviewers: 'sang-kipkoech' # comma-separated list of usernames
