--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -7,8 +7,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  lint:
-    name: flake8 lintintg
+  build:
+    name: lint with Ruff
     runs-on: ubuntu-latest
 
     strategy:
@@ -31,9 +31,13 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       
-      - name: Run flake8
+      - name: Run Ruff
         run: |
-          flake8 .
+          pip install ruff
+
+          ruff --format=github --target-version=py311 .
+
+        continue-on-error: true
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
