--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -35,9 +35,7 @@ jobs:
         run: |
           pip install ruff
 
-          ruff --format=github --target-version=py311 .
-
-        continue-on-error: true
+          ruff check --format=github --target-version=py311 .
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
