--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,13 @@
 [tool.ruff]
 # Decrease the maximum line length to 79 characters.
 line-length = 79
+
+[tool.ruff]
+select = [
+  "E",   # pycodestyle
+  "F",   # pyflakes
+  "UP",  # pyupgrade
+]
+
+[tool.ruff.pydocstyle]
+convention = "google"
