--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,32 @@
 [tool.ruff]
 # Decrease the maximum line length to 79 characters.
 line-length = 79
+
+# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
+select = ["E"]
+ignore = []
+
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
+]
+per-file-ignores = {}
