--- a/.github/workflows/auto_reviewer.yml
+++ b/.github/workflows/auto_reviewer.yml
@@ -1,15 +1,31 @@
 name: Auto Assign Reviewers
-
 on:
   pull_request:
-    types: [opened, reopened]
-    branches:
-      - main
+    types:
+      - opened
 
 jobs:
-  auto_assign_reviewers:
+  assign_reviewer:
     runs-on: ubuntu-latest
     steps:
-      - uses: delivery-much/actions-assigner@v1
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Assign Reviewers
+        uses: actions/github-script@v4
+        env:
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const pr = context.payload.pull_request;
+            const reviewers = ['sang-kipkoech', 'BrianMuthuure97']; // Add the desired reviewers here
+            const owner = pr.base.user.login;
+            const repo = pr.base.repo.name;
+            const prNumber = pr.number;
+            
+            await github.pulls.requestReviewers({
+              owner,
+              repo,
+              pull_number: prNumber,
+              reviewers
+            });
