--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-default_stages: [commit, push]
+default_stages: [commit]
 default_language_version:
   python: python3.11
 repos:
@@ -6,6 +6,9 @@ repos:
     rev: v2.3.0
     hooks:
     -   id: check-yaml
+    -   id: end-of-file-fixer
+    -   id: trailing-whitespace
+    -   id: check-added-large-files
   - repo: https://github.com/PyCQA/flake8
     rev: 3.8.2
     hooks:
@@ -16,4 +19,3 @@ repos:
       exclude: ^($)
       fail_fast: false
       types: ['python']
-
