--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,17 +10,20 @@ jobs:
         steps:
             - uses: actions/checkout@v2
 
+            - name: Setup Node.js environment
+              uses: actions/setup-node@v2.1.5
+
             - name: conventional Changelog Action
               id: changelog
               uses: TriPSs/conventional-changelog-action@v3
               with:
-                github-token: ${{ secrets.GITHUB_TOKEN }}
+                github-token: ${{ secrets.CHANGELOG_RELEASE }}
 
             - name: create release
               uses: actions/create-release@v1
               if: ${{ steps.changelog.outputs.skipped == 'false'}}
               env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                GITHUB_TOKEN: ${{ secrets.CHANGELOG_RELEASE }}
               with:
                 tag_name: ${{ steps.changelog.outputs.tag }}
                 release_name: ${{ steps.changelog.outputs.tag }}
