feat: add new changes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,25 @@
-name: Releases
+name: "tagged-release"
 
 on:
-    push:
-        tags:
-            - "v*"
-        branches:
-            - main
-jobs:
-    changelog:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
+  push:
+    tags:
+      - "v*"
 
-            - name: create release
-              uses: "marvinpinto/action-automatic-releases@latest"
-              with:
-                repo_token: ${{ secrets.GITHUB_TOKEN }}
-                prerelease: false
+jobs:
+  tagged-release:
+    name: "Tagged Release"
+    runs-on: "ubuntu-latest"
+
+    steps:
+      # ...
+      - name: "Build & test"
+        run: |
+          echo "done!"
+
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          files: |
+            LICENSE.txt
+            *.jar
