--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,24 +1,27 @@
-name: "tagged-release"
+name: Releases
 
 on:
-  push:
-    tags:
-      - "v*"
-
+    push:
+        branches:
+            - main
 jobs:
-  tagged-release:
-    name: "Tagged Release"
-    runs-on: "ubuntu-latest"
+    changelog:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
 
-    steps:
-      - name: "Build & test"
-        run: |
-          echo "done!"
+            - name: conventional Changelog Action
+              id: changelog
+              uses: TriPSs/conventional-changelog-action@v3
+              with:
+                github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: "marvinpinto/action-automatic-releases@latest"
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: false
-          files: |
-            LICENSE.txt
-            *.jar
+            - name: create release
+              uses: actions/create-release@v1
+              if: ${{ steps.changelog.outputs.skipped == 'false'}}
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                tag_name: ${{ steps.changelog.outputs.tag }}
+                release_name: ${{ steps.changelog.outputs.tag }}
+                body: ${{ steps.changelog.outputs.clean_changelog }}
