--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
-name: Releases
+name: Release flow
 
 on:
     push:
         branches:
-            - main
+            - release
         paths-ignore:
         - package.json
         - CHANGELOG.md
@@ -12,23 +12,33 @@ env:
   RELEASE_PATH: output.zip
 
 jobs:
-    changelog:
+    setup:
+        name: Checkout & generate changelog
         runs-on: ubuntu-latest
+
+        outputs:
+          clean_changelog: ${{ steps.changelog.outputs.clean_changelog }}
+          tag: ${{ steps.changelog.outputs.tag }}
+          skipped: ${{ steps.changelog.outputs.skipped }}
+
         steps:
-            - uses: actions/checkout@v2
+          - name: Checkout
+            uses: actions/checkout@v3
+            with:
+              ref: release
+          - name: Generate Changelog
+            id: changelog
+            uses: TriPSs/conventional-changelog-action@v3
+            with:
+                git-message: 'chore(release): {version}'
+                release-count: 0
 
-            - name: conventional Changelog Action
-              id: changelog
-              uses: TriPSs/conventional-changelog-action@v3
-              with:
-                github-token: ${{ secrets.GITHUB_TOKEN }}
-
-            - name: create release
-              uses: actions/create-release@v1
-              if: ${{ steps.changelog.outputs.skipped == 'false'}}
-              env:
+          - name: create release
+            uses: actions/create-release@v1
+            if: ${{ steps.changelog.outputs.skipped == 'false'}}
+            env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
+            with:
                 tag_name: ${{ steps.changelog.outputs.tag }}
                 release_name: ${{ steps.changelog.outputs.tag }}
                 body: ${{ steps.changelog.outputs.clean_changelog }}
