--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -30,14 +30,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      lint-with-ruff
-      
-      - name: Run Ruff
 
+      - name: Run flake8
         run: |
-          ruff check --format=github --target-version=py311 .
-
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+          flake8 .
 
   test:
     name: test
