--- a/.github/workflows/bumb.yml
+++ b/.github/workflows/bumb.yml
@@ -23,4 +23,4 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
-        PRERELEASE: true
+        RELEASE: true
