--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -23,8 +23,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
-          cache: 'pip'
-      - uses: actions/checkout@v3
+      
+      - name: Caching
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip
 
       - name: Install Dependencies
         run: |
